tidying up player related things